# devops_zero_to_hero

./: pyproject.toml
config_maps/: cm.yaml
deployments/: python-app.yaml
devops_zero_to_hero/git_basics/: sample.txt  sample2.txt
ingress/: minimal-ingress.yaml
service/: flask-service.yaml
